--- a/index.css
+++ b/index.css
@@ -1,10 +1,11 @@
 * {
   margin: 0px;
   padding: 0px;
+
 }
 
 ul {
-  margin-left: 1.7rem;
+  margin-left: 1.7em;
   margin-bottom: 10px;
 }
 
@@ -24,18 +25,18 @@ ul {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: min(1000px, 100vw);
+  width: min(1000px, 95%);
   margin: 0 auto;
 }
 
 .sub {
   margin: 50px 0px 10px;
-  font-size: 2.5rem;
+  font-size: 2.5em;
   border-bottom: solid 3px rgb(193, 209, 212);
 }
 
 .subsub {
-  font-size: 1.8rem;
+  font-size: 1.8em;
   margin: 15px 0px 7px;
 }
 
@@ -44,12 +45,12 @@ ul {
   flex-direction: column;
   align-items: center;
   padding: 50px 0px 20px;
-  font-size: 3rem;
+  font-size: 3em;
   animation: bounceIn 0.6s ease 0s 1 normal backwards running;
 }
 
 .trasta {
-  width: 10rem;
+  width: min(5em,50%);
   border-radius: 50%;
   margin-bottom: 10px;
 }
@@ -61,7 +62,7 @@ ul {
 }
 
 .logo {
-  height: 4rem;
+  height: 4em;
   width: auto;
   margin: 20px;
   /*
