--- a/index.css
+++ b/index.css
@@ -26,11 +26,11 @@ ul {
   flex-direction: column;
   align-items: center;
   width: min(1000px, 95%);
-  margin: 0 auto;
+  margin: 0 auto 50px;
 }
 
 .sub {
-  margin: 50px 0px 10px;
+  margin: 40px 0px 10px;
   font-size: 2.5em;
   border-bottom: solid 3px rgb(193, 209, 212);
 }
@@ -81,6 +81,10 @@ ul {
 
 .link {
   display: inline-block;
+}
+
+.fa-external-link-alt {
+  color: rgb(0, 174, 255);
 }
 
 .logo:hover {
